# zkRNN

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_PLAN.md  README  README.md  SYSTEM_DOCUMENTATION.md  proof_transcript  rnn_infer_Nova.sh  rnn_test_Nova.sh  rnn_test_self.sh
bench/: witness_dump.json
circuits/: activation_softmax_d12.pws  activation_tanh_d2.pws  activation_tanh_d6.pws
src/: CMakeLists.txt  GKR.cpp  GKR.h  RNN.cpp  RNN.h  activation_circuit_loader.cpp  activation_circuit_loader.h  activation_gkr.cpp  activation_gkr.h  activation_types.h  activation_witness.cpp  activation_witness.h  aux_sumcheck.cpp  aux_sumcheck.h  aux_witness.cpp  aux_witness.h  bench.hpp  circuit.cpp  circuit.h  fieldElement.cpp  fieldElement.hpp  finalise_proof.cpp  finalise_proof.h  inputCircuit.hpp  ivc_adapter.cpp  ivc_adapter.h  linear_code_encode.h  logup.cpp  logup.hpp  main.cpp  mimc.cpp  pol_verifier.cpp  pol_verifier.h  poly_commit.cpp  poly_commit.h  polynomial.cpp  polynomial.h  proof_serialization.cpp  proof_serialization.h  proof_utils.cpp  (+20 more)
tests/: CMakeLists.txt  TESTING_GUIDE.md  logup_globals.cpp  logup_stub.cpp  run_all_tests.sh  test_activation_gkr.cpp  test_activation_loader.cpp  test_activation_witness.cpp  test_aux_sumcheck.cpp  test_aux_witness.cpp  test_finalise_verifier.cpp  test_ivc_adapter.cpp  test_proof_serialization.cpp  test_prove_leaf.cpp  test_stream_orchestrator.cpp  test_sum_matmul.cpp  test_sum_matmul_wrapper.cpp  test_witness_snapshot.cpp
